# NewLoop

./: .gitignore  2026-03-06 The New Loop A Future History of the AI Transition.docx  Announcement to TAI Econ.txt  EconomySim_Policy_Choices_Summary.docx  LICENSE  Stock_Flow_Conservation_Audit.docx  Stock_Flow_Matrix_Overview.docx  What’s still undecided (and needs explic.md  __init__.py  app.py  config.py  dashboard.py  engine.py  income_support.py  newloop.py  newloop_core.py  plotting.py  population.py  pyproject.toml  requirements.txt  results.py  sl-newloop.py  slnewloop.py  snowflake.yml  streamlit-run-path  streamlit_params.py  sweep_experiments.py
.devcontainer/: devcontainer.json
econsim/: 2026-02-18 EconomySim conceptual policy choices.docx  2026-02-20 Mortgage_Indexing_Policy_Overview.docx  2026-02-20 Policy choices for the AI transition.docx  2026-02-24 Future History of the AI Transition.docx  Stock Flow Consolidated Technical Note.docx  Stock_Flow_Consolidated_Technical_Note.docx  __init__.py  config.py  dashboard.py  economy_sim.py  engine.py  mathutils.py  plotting.py  population.py  results.py  sl-econsim.py  streamlit_params.py  sweep_experiments.py  table_of_data.py  types.py
newloop/: .gitignore  2026-02-20 Escaping the Fisher Trap.docx  2026-02-20 Policy choices for the AI transition.docx  2026-03-02 NewLoop A Future History of the AI Transition.docx  2026-03-03 The New Loop A Future History of the AI Transition.docx  2026-03-04 New Loop Policy Architecture.docx  2026-03-04 The New Loop A Future History of the AI Transition.docx  README.md  (+23 more)
(+55 files in other folders)
