[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newloop"
version = "0.1.0"
description = "NewLoop automation-transition simulation package"
readme = "newloop/README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["newloop"]
